Completed Work Experience Page

--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ img{
 
 #floatingButton {
 	font-size: 32px;
-	background-color: #D3E3E9;
+	background-color: #FFC252;
 	position: fixed;
 	z-index: 100;
 	width: 60px;
@@ -76,9 +76,7 @@ img{
 	bottom: 2%;
 	right: 2%;
 	border: none;
-	border-radius: 300px;
 	box-shadow: 10px 10px 5px grey;
-	outline: 0 !important;
 }
 
 #divAltColor {
