--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+
 /* Banner Background Configurations */
 #bannerTitle {
 	color: #FFFFFF;
@@ -64,6 +65,7 @@ ul{
 img{
 	margin-left: auto;
 	margin-right: auto;
+	box-shadow: 5px 5px 5px grey;
 }
 
 #divAltColor {
