--- a/main.css
+++ b/main.css
@@ -2,8 +2,8 @@
 /* Banner Background Configurations */
 #bannerTitle {
 	color: #FFFFFF;
-	font-family: 'Quicksand';
-	font-size: 55px;
+	font-family: 'Roboto Light';
+	font-size: 72px;
 	font-weight: bold;
 	margin: auto;
 }
@@ -11,8 +11,8 @@
 	font-family: 'Arsenal';
 	color: #FFFFFF;
 	margin: auto;
-	text-align: left;
-	font-size: calc(90% + 0.5vh);
+	text-align: center;
+	font-size: 20px;
 }
 #banner {
 	margin-left: 0%;
@@ -63,12 +63,6 @@ ul{
 img{
 	margin-left: auto;
 	margin-right: auto;
-	box-shadow: 5px 5px 5px grey;
-}
-
-#divAltColor {
-	background-color: #FFFFFF;
-	
 }
 
 /* Force images to a certain size on the homepage */
@@ -136,16 +130,29 @@ img{
 	border-radius: 10px;
 }	
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) {
 	.grid-container {
 		display: grid;
 		grid-template-columns: auto;
 	}
 }
 
-@media screen and (min-width: 1001px){
+@media screen and (min-width: 1101px){
 	.grid-container {
 		display: grid;
 		grid-template-columns: auto auto;
 	}
 }
+
+/* Used for Javascript function(s) */
+#project1 {display: none;}
+#expandProj1 {color: #009200; font-weight: bold;}
+
+#project2 {display: none;}
+#expandProj2 {color: #009200; font-weight: bold;}
+
+#project3 {display: none;}
+#expandProj3 {color: #009200; font-weight: bold;}
+
+#project4 {display: none;}
+#expandProj4 {color: #009200; font-weight: bold;}
