--- a/main.css
+++ b/main.css
@@ -23,6 +23,16 @@
 	background-size: 100% 100%;
 }
 
+.projectPictures {
+	display:block;
+	width:auto;
+	height:auto;
+	margin-left:auto;
+	margin-right:auto;
+	max-width:90%;
+	max-height: 500px;
+}
+
 body {
 	font-family: 'Arsenal';
 }
