--- a/main.css
+++ b/main.css
@@ -97,6 +97,8 @@ a { color: inherit; }
 	display:block;
 	width:auto;
 	height:auto;
+	margin-top: auto;
+	margin-bottom: auto;
 	margin-left:auto;
 	margin-right:auto;
 	max-width:90%;
@@ -162,16 +164,3 @@ a { color: inherit; }
 		grid-template-columns: auto auto;
 	}
 }
-
-/* Used for Javascript function(s) */
-#project1 {display: none;}
-#expandProj1 {color: #009200; font-weight: bold;}
-
-#project2 {display: none;}
-#expandProj2 {color: #009200; font-weight: bold;}
-
-#project3 {display: none;}
-#expandProj3 {color: #009200; font-weight: bold;}
-
-#project4 {display: none;}
-#expandProj4 {color: #009200; font-weight: bold;}
