--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+@import url("fontawesome-all.min.css");
+@import url("https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic|Source+Code+Pro:400");
 
 /* Banner Background Configurations */
 #bannerTitle {
@@ -82,6 +84,17 @@ img{
 
 a { color: inherit; } 
 
+/* Float 3 columns side by side */
+.threeColumn {
+	display: grid;
+	grid-gap: 10px 10px;
+	grid-template-columns: auto auto auto;
+	margin-left: 30%;
+	margin-right: 30%;
+	padding: 10px;
+	text-align: center;
+}
+
 /* Force images to a certain size on the homepage */
 #projectGrid {
 	margin: auto;
@@ -137,18 +150,11 @@ a { color: inherit; }
 }
 
 .gridBtnItem {
-	font-size: calc(100% + 1.5vh);
-	color: #FFFFFF;
+	font-size: 30px;
+	color: #000000;
 	cursor: pointer;
 	padding-left: 8px;
 	padding-right: 8px;
-	border: 1px solid white;
-	border-radius: 10px;
-}
-
-.gridBtnItem:hover {
-	border: 1px solid white;
-	border-radius: 10px;
 }	
 
 @media screen and (max-width: 1100px) {
