--- a/projects.css
+++ b/projects.css
@@ -9,7 +9,7 @@ body {
 	margin-left: 10%;
 	margin-right: 10%;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 	grid-gap: 25px;
 	justify-content: center;
 }
@@ -20,6 +20,7 @@ body {
 	padding: 16px;
 	text-align: center;
 	background-color: #f1f1f1;
+	height: 350px;
 }
 
 .cardHeader {
